upgrade to 3.29.1-GA