@@ -139,7 +139,7 @@
         <github.project>japicmp</github.project>
 		<maven.site.skip>false</maven.site.skip>
 		<surefireVersion>3.0.0-M7</surefireVersion>
-		<javassist.version>3.24.0-GA</javassist.version>
+		<javassist.version>3.29.1-GA</javassist.version>
 		<guava.version>30.1-jre</guava.version>
 		<jaxb.version>2.2.7</jaxb.version>
 		<javax-activation.version>1.1</javax-activation.version>
@@ -422,46 +422,6 @@
 						<configuration>
 							<argLine>
 								--illegal-access=warn
-							</argLine>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-						<configuration>
-							<additionalJOption>
-							</additionalJOption>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>java-17</id>
-			<activation>
-				<jdk>[17,)</jdk>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<!-- FIXME: remove once https://github.com/jboss-javassist/javassist/issues/400 has been fixed -->
-							<!-- FIXME: remove once https://github.com/stefanbirkner/system-rules/issues/85 has been fixed -->
-							<argLine>
-								--add-opens java.base/java.lang=ALL-UNNAMED
-								-Djava.security.manager=allow
-							</argLine>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<configuration>
-							<argLine>
-								--add-opens java.base/java.lang=ALL-UNNAMED
-								-Djava.security.manager=allow
 							</argLine>
 						</configuration>
 					</plugin>
